package edu.hitsz.prop;

import edu.hitsz.aircraft.HeroAircraft;
import edu.hitsz.aircraft.strategy.CircleShootStrategy;

/**
 * 超级火力道具
 */
public class FirePlusSupply extends AbstractProp {

    private static final long EFFECT_DURATION_MS = 6_000L;

    public FirePlusSupply(int locationX, int locationY, int speedX, int speedY) {
        super(locationX, locationY, speedX, speedY);
    }

    @Override
    public void effect() {
        HeroAircraft heroAircraft = HeroAircraft.getInstance();
        if (heroAircraft != null) {
            heroAircraft.setShootStrategyForDuration(new CircleShootStrategy(20, 7), EFFECT_DURATION_MS);
        }
        System.out.println("FirePlusSupply active! Hero strategy -> CircleShootStrategy");
    }
}
